force-app/main/default/objects/DepositosMaestros__c/DepositosMaestros__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DepósitosMaestros</label>
</CustomObject>