force-app/main/default/objects/DepositosMaestros__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <label>D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>