force-app/main/default/objects/DepositosMaestros__c/fields/Deposito__c.field-meta.xml
<CustomField>
    <fullName>Deposito__c</fullName>
    <label>Deposito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>