force-app/main/default/objects/DepositosMaestros__c/fields/Desmantelamiento__c.field-meta.xml
<CustomField>
    <fullName>Desmantelamiento__c</fullName>
    <label>Desmantelamiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>