force-app/main/default/objects/DepositosMaestros__c/fields/EsAereo__c.field-meta.xml
<CustomField>
    <fullName>EsAereo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EsAereo</label>
    <type>Checkbox</type>
</CustomField>