force-app/main/default/objects/DepositosMaestros__c/fields/Memoria__c.field-meta.xml
<CustomField>
    <fullName>Memoria__c</fullName>
    <label>Memoria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>