force-app/main/default/objects/DepositosMaestros__c/fields/Obra_civil__c.field-meta.xml
<CustomField>
    <fullName>Obra_civil__c</fullName>
    <label>Obra civil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>