force-app/main/default/objects/DepositosMaestros__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>