force-app/main/default/objects/DepositosMaestros__c/fields/Resolucion_anticipada__c.field-meta.xml
<CustomField>
    <fullName>Resolucion_anticipada__c</fullName>
    <label>Resolución anticipada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>