force-app/main/default/objects/DepositosMaestros__c/fields/Vallado__c.field-meta.xml
<CustomField>
    <fullName>Vallado__c</fullName>
    <label>Vallado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>