force-app/main/default/objects/DepositosMaestros__c/listViews/Dep_sitos.listView-meta.xml
<ListView>
    <fullName>Dep_sitos</fullName>
    <columns>NAME</columns>
    <columns>Capacidad__c</columns>
    <columns>D__c</columns>
    <columns>Deposito__c</columns>
    <columns>Desmantelamiento__c</columns>
    <columns>EsAereo__c</columns>
    <columns>Instalacion_exterior__c</columns>
    <columns>Obra_civil__c</columns>
    <columns>Proyecto__c</columns>
    <columns>Resolucion_anticipada__c</columns>
    <columns>Vallado__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Memoria__c</columns>
    <columns>Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Depósitos</label>
    <language>es</language>
</ListView>